--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="row">
+
+      <div class="col-lg-2"></div>
+     <div class="col-lg-8">
+        <h4>Posts :</h4>
+        <app-post-list [posts]="posts"></app-post-list>
+     </div>
+  </div>
+
+</div>
